--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "telegram-video-compressor-bot",
+  "name": "telegram-cloudconvert-bot",
   "version": "1.0.0",
-  "description": "Bot to compress videos and send to Telegram channel",
-  "main": "bot.js",
+  "description": "Bot to compress videos via CloudConvert",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cloudconvert": "^4.3.0",
-    "dotenv": "^16.0.3",
-    "telegraf": "^4.12.3"
+    "telegraf": "^4.0.0",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "fs": "0.0.1-security"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
